--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website for a Coffee Shop",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Yoeuth Danny Yen",
   "license": "ISC",
